Dobra, PDFy już są.
